Agg estructura Js y JSON

--- a/index.html
+++ b/index.html
@@ -6,39 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOCUMENTACIÓN JS</title>
-    <link rel="stylesheet" href="./styles.css/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
 <body>
     <nav id="navbar">
         <header>DOCUMENTACIÓN JS</header>
-        <img id="image" src="https://png.pngtree.com/png-clipart/20190922/original/pngtree-documentation-icon-in-trendy-style-isolated-background-png-image_4779691.jpg" alt="document">
-        <ul>
-            <li><a class="nav-link" href="#INTRODUCCIÓN">INTRODUCCIÓN</a></li>
-            <li>
-                <a class="nav-link" href="#QUE_DEBERIAS_SABER">QUE DEBERIAS SABER</a>
-            </li>
-            <li>
-                <a class="nav-link" href="#JAVASCRIPT_Y_JAVA">JAVASCRIPT Y JAVA</a>
-            </li>
-            <li><a class="nav-link" href="#HELLO_WORLD">HELLO WORLD</a></li>
-            <li><a class="nav-link" href="#VARIABLES">VARIABLES</a></li>
-            <li>
-                <a class="nav-link" href="#DECLARACIÓN_DE_VARIABLES">DECLARACIÓN DE VARIABLES</a>
-            </li>
-            <li><a class="nav-link" href="#VARIABLE_SCOPE">VARIABLE SCOPE</a></li>
-            <li><a class="nav-link" href="#VARIABLES_GLOBALES">VARIABLES GLOBALES</a></li>
-            <li><a class="nav-link" href="#CONSTANTES">CONSTANTES</a></li>
-            <li><a class="nav-link" href="#TIPOS_DE_DATOS">TIPOS DE DATOS</a></li>
-            <li>
-                <a class="nav-link" href="#DECLARACIÓN_DE_IF...ELSE">DECLARACIÓN DE IF...ELSE</a>
-            </li>
-            <li><a class="nav-link" href="#DECLARACIÓN_DE_WHILE">DECLARACIÓN DE WHILE</a></li>
-            <li>
-                <a class="nav-link" href="#DECLARACIÓN_DE_FUNCIONES">DECLARACIÓN DE FUNCIONES</a>
-            </li>
-            <li><a class="nav-link" href="#REFERENCIA">REFERENCIA</a></li>
-        </ul>
+            <img id="image"
+                src="https://png.pngtree.com/png-clipart/20190922/original/pngtree-documentation-icon-in-trendy-style-isolated-background-png-image_4779691.jpg"
+                alt="document">
+            <ul>
+                <li><a class="nav-link" href="#INTRODUCCIÓN">INTRODUCCIÓN</a></li>
+                <li>
+                    <a class="nav-link" href="#QUE_DEBERIAS_SABER">QUE DEBERIAS SABER</a>
+                </li>
+                <li>
+                    <a class="nav-link" href="#JAVASCRIPT_Y_JAVA">JAVASCRIPT Y JAVA</a>
+                </li>
+                <li><a class="nav-link" href="#HELLO_WORLD">HELLO WORLD</a></li>
+                <li><a class="nav-link" href="#VARIABLES">VARIABLES</a></li>
+                <li>
+                    <a class="nav-link" href="#DECLARACIÓN_DE_VARIABLES">DECLARACIÓN DE VARIABLES</a>
+                </li>
+                <li><a class="nav-link" href="#VARIABLE_SCOPE">VARIABLE SCOPE</a></li>
+                <li><a class="nav-link" href="#VARIABLES_GLOBALES">VARIABLES GLOBALES</a></li>
+                <li><a class="nav-link" href="#CONSTANTES">CONSTANTES</a></li>
+                <li><a class="nav-link" href="#TIPOS_DE_DATOS">TIPOS DE DATOS</a></li>
+                <li>
+                    <a class="nav-link" href="#DECLARACIÓN_DE_IF...ELSE">DECLARACIÓN DE IF...ELSE</a>
+                </li>
+                <li><a class="nav-link" href="#DECLARACIÓN_DE_WHILE">DECLARACIÓN DE WHILE</a></li>
+                <li>
+                    <a class="nav-link" href="#DECLARACIÓN_DE_FUNCIONES">DECLARACIÓN DE FUNCIONES</a>
+                </li>
+                <li><a class="nav-link" href="#REFERENCIA">REFERENCIA</a></li>
+            </ul>
     </nav>
     <main id="main-doc">
         <section class="main-section" id="INTRODUCCIÓN">
@@ -278,12 +280,12 @@
             <article>
                 <ul>
                     <li>Para conocer más acerca de la documentación de javascript vista este enlace<a
-                            href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="blank">  DJS</a></li>
+                            href="https://developer.mozilla.org/es/docs/Web/JavaScript" target="blank"> DJS</a></li>
                 </ul>
             </article>
         </section>
     </main>
-
+    <script src="./scripts/scripts.js"></script>
 </body>
 
 </html>
