--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,7 @@
 <body>
     <nav id="navbar">
         <header>DOCUMENTACIÓN JS</header>
+        <a id="icon-login" href="index1.html">LOGIN</a>
             <img id="image"
                 src="https://png.pngtree.com/png-clipart/20190922/original/pngtree-documentation-icon-in-trendy-style-isolated-background-png-image_4779691.jpg"
                 alt="document">
