--- a/registro.html
+++ b/registro.html
@@ -21,7 +21,7 @@
         <div class="container">
         <div class="div-usuario">
             <div class="row usuario">
-                    <h1><a href="index1.html">LOGIN</a>Crear Perfil</h1>
+                    <h1><a href="index.html">LOGIN</a>Crear Perfil</h1>
                 <div class="col datos">
 
                 </div>
